# eTLD

./: .gitignore  CMakeLists.txt  README.md  SVMb.txt  SVMb3.txt  SVMb3_DEMO.txt  SVMwt3.txt  SVMwt3_DEMO.txt  buddha.txt  countMat.txt  getDescripter.psess  getDescripter.sln  headphone.txt  initialTD.txt  sci.txt  vocab.txt  vocab3000_84.txt  vocabTD3cl_RBgen.txt  vocabTD3cl_RBgen_DEMO.txt  yinyang.txt
example/: loadandtrack.cpp
getDescripter/: ECparam.h  Source.cpp  Source1.cpp  getDescripter.vcxproj  getDescripter.vcxproj.filters  main.cpp  mainBackup.cpp
getDescripter/Debug/: vc141.idb
getDescripter/Debug/getDescripter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  getDescripter.lastbuildstate
getDescripter/x64/Debug/: main.obj.enc  vc141.idb
getDescripter/x64/Debug/getDescripter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  getDescripter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
getDescripter/x64/Release/getDescripter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  getDescripter.lastbuildstate  getDescripter.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: ECparam.h  ETLDDesc.h  Matrix.h  currSpikeArr.h
sample_td/: monitor_initial.txt
src/: ECparam.cpp  ETLDDesc.cpp  Matrix.cpp  main.cpp
x64/Debug/: getDescripter.ilk
x64/Release/: getDescripter.iobj  getDescripter.ipdb
